🪘🖨️ Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "engines": { "node": "16.14.x" },
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
